django api replaced

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#DC143C</color>
     <color name="green">#46FF2E</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
