qr scanner updated

--- a/app/src/main/res/layout/activity_send_files.xml
+++ b/app/src/main/res/layout/activity_send_files.xml
@@ -5,25 +5,58 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".send_files">
+    android:background="?attr/colorSurface"
+    tools:context=".send_files"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/test_data"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="test data"
+        android:textAlignment="center"
+        android:text="Code"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+        android:textColor="?attr/colorOnSurface"
+        android:padding="16dp"
+        android:background="@android:color/holo_blue_light"
+        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="20sp"/>
+        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintWidth_percent="0.8"/>
 
-    <Button
-        android:id="@+id/back_btn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="back"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="43dp" />
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/test_data"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        android:layout_marginTop="24dp"
+        app:layout_constraintWidth_percent="0.9">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/send_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Send"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_marginEnd="8dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/scan_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Scan"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_marginStart="8dp"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
